--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,9 @@
         <h1>一日行程規劃網站</h1>
     </header>
     <main>
-        {% block content %}{% endblock %}
+        <div class="container">
+            {% block content %}{% endblock %}
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 一日行程規劃網站</p>
